--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
         name: test
         url: jdbc:mysql://120.78.67.76:3306/test
         username: test
-        password: test123
+        password: test
         # 使用druid数据源
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.jdbc.Driver
@@ -34,3 +34,7 @@ pagehelper:
     reasonable: true
     supportMethodsArguments: true
     params: count=countSql
+
+logging:
+    config:
+        classpath: log4j2-spring.xml
